@@ -1,9 +1,8 @@
 /*
 	dump_seekindex: Scan a mpeg file and dump its seek index.
 
-	copyright 2010 by the mpg123 project - free software under the terms of the LGPL 2.1
-	see COPYING and AUTHORS files in distribution or http://mpg123.org
-	initially written by Patrick Dehne
+	This is example code only sensible to be considered in the public domain.
+	Initially written by Patrick Dehne.
 */
 
 #include <mpg123.h>
@@ -23,7 +22,11 @@ int main(int argc, char **argv)
 		fprintf(stderr, "\nUsage: %s <mpeg audio file>\n\n", argv[0]);
 		return -1;
 	}
-	mpg123_init();
+#if MPG123_API_VERSION < 46
+	// Newer versions of the library don't need that anymore, but it is safe
+	// to have the no-op call present for compatibility with old versions.
+	 mpg123_init();
+#endif
 	m = mpg123_new(NULL, NULL);
 	mpg123_param(m, MPG123_RESYNC_LIMIT, -1, 0);
 	mpg123_param(m, MPG123_INDEX_SIZE, -1, 0);
@@ -37,6 +40,5 @@ int main(int argc, char **argv)
 
 	mpg123_close(m);
 	mpg123_delete(m);
-	mpg123_exit();
 	return 0;
 }
