@@ -1,9 +1,8 @@
 /*
 	id3dump: Print ID3 tags of files, scanned using libmpg123.
 
-	copyright 2007 by the mpg123 project - free software under the terms of the LGPL 2.1
-	see COPYING and AUTHORS files in distribution or http://mpg123.org
-	initially written by Thomas Orgis
+	This is example code only sensible to be considered in the public domain.
+	Initially written by Thomas Orgis.
 */
 
 #include "mpg123.h"
@@ -141,7 +140,11 @@ int main(int argc, char **argv)
 		fprintf(stderr, "\nUsage: %s <mpeg audio file list>\n\n", argv[0]);
 		return -1;
 	}
+#if MPG123_API_VERSION < 46
+	// Newer versions of the library don't need that anymore, but it is safe
+	// to have the no-op call present for compatibility with old versions.
 	mpg123_init();
+#endif
 	m = mpg123_new(NULL, NULL);
 
 	for(i=1; i < argc; ++i)
@@ -173,6 +176,5 @@ int main(int argc, char **argv)
 		mpg123_close(m);
 	}
 	mpg123_delete(m);
-	mpg123_exit();
 	return 0;
 }
